--- a/TEAM_CONTROL_GPS/src/main/webapp/resources/css/member.css
+++ b/TEAM_CONTROL_GPS/src/main/webapp/resources/css/member.css
@@ -21,7 +21,7 @@ table {
     border-spacing: 0;
 }  
 table tr td {
-	padding: 10px 0;	
+	padding: 10px 5px;	
 	border-bottom: 1px solid #ccc;
 }  
 .container{
@@ -40,11 +40,32 @@ table tr td {
 	width:150px;
 	height:30px;	
 }
+
 .content1 input{
 	width:225px;
 	height:30px;	
 }
 
+.button_field {	
+	height:40px;	
+}
 
+.button_1 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 14px;    
+    letter-spacing: 1px;
+    padding: 10px 30px;
+    border-radius: 4px;
+    transition: 0.5s;
+    line-height: 1;
+    color: #fff;
+    background: #4492ff;
+    border: none;
+    margin: 5px;
+}
+.button_1:hover {
+    background: #356dff;
+}
 
 
