--- a/TEAM_CONTROL_GPS/src/main/webapp/resources/css/locationManagement.css
+++ b/TEAM_CONTROL_GPS/src/main/webapp/resources/css/locationManagement.css
@@ -144,7 +144,13 @@ header {
     transform-origin: 50% 34px;
 }
 
-
+.patientName {
+	border: 1px solid #ccc;
+	border-radius: 10px;
+	padding: 6px 0 6px 10px;
+	font-size: 15px;
+	margin-bottom: 3px;
+}
 
 /* 컴포넌트 감추기용 disnone */
 .initial-disnone{
